--- a/index.html
+++ b/index.html
@@ -7,9 +7,13 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <!--<div id="game">
-        <div id="character"></div>
-        <div id="block"></div>
+     <!--<div class="gameUi" id="game">
+        <div class="time"></div>
+        <h1 id="time">0</h1>
+        <p class="some text">time survived</p>
+        <div class="button">
+            <button id="btn">Start Game</button>
+        </div>
     </div>-->
     <canvas id="canvas1"></canvas>
     <script src="script.js"></script>
