resized canvas and added p tag to tell player controls

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <p>move:W-up S-down A-left D-right and shoot with mouse</p>
      <!--<div class="gameUi" id="game">
         <div class="time"></div>
         <h1 id="time">0</h1>
